cmake_minimum_required(VERSION 3.10)
project(oj_problem_015 CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(code code.cpp)
if (MSVC)
  target_compile_options(code PRIVATE /O2)
else()
  target_compile_options(code PRIVATE -O2 -pipe -static-libstdc++)
endif()
